--- a/main.html
+++ b/main.html
@@ -9,14 +9,15 @@
 	</head>
 
 	<body>
-		<form> 
+		<form>
 			<select id="colorSelect"> 
-				<option>Red</option> 
-				<option>Green</option> 
-				<option>White</option> 
-				<option>Black</option> 
-			</select> 
-			<input type="button" value="Select and Remove"> 
+				<option id='red' value='red'>Red</option> 
+				<option id='green' value='green'>Green</option> 
+				<option id='white' value='white'>White</option> 
+				<option id='black' value='black'>Black</option> 
+			</select>
+			
+			<input id='delete' type="button" value="Select and Remove"> 
 		</form>
 
 		<script type="text/javascript" src="./script.js">
