--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
 	<body>
 		<form>
 			<select id="colorSelect"> 
-				<option id='red' value='red'>Red</option> 
-				<option id='green' value='green'>Green</option> 
-				<option id='white' value='white'>White</option> 
-				<option id='black' value='black'>Black</option> 
+				<option id='Red' value='Red'>Red</option> 
+				<option id='Green' value='Green'>Green</option> 
+				<option id='White' value='White'>White</option> 
+				<option id='Black' value='Black'>Black</option> 
 			</select>
 			
 			<input id='delete' type="button" value="Select and Remove"> 
